# cesrox-bindings

./: Cargo.toml  README.md
.github/workflows/: npm-release.yml
docs/: CNAME  index.html  self_addressing_identifier.js  self_addressing_identifier_bg.wasm
said/python/: Cargo.toml  README.md  build.rs
said/python/src/: glue.rs.in
said/wasm/: Cargo.toml  index.html  readme.md
said/wasm/src/: lib.rs
