[package]
name = "said_python"
version = "0.2.1"
edition = "2021"
authors = ["Human Colossus"]
description = "Python bindings for Self-Addressing identifier library"
documentation = "https://github.com/thclab/cesrox-bindings/tree/main/said/python/README.md"
homepage = "https://github.com/thclab/cesrox-bindings/tree/main/said/python"
repository = "https://github.com/thclab/cesrox-bindings"
license = "EUPL-1.2"
keywords = ["keri", "SAI", "identifier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "said_python"
crate-type = ["cdylib", "staticlib"]

[dependencies]
said = { version = "0.3.0"}
cpython = { version = "0.5", features = ["extension-module"] }

[build-dependencies]
flapigen = "0.6.0-pre7"
