[package]
name = "self-addressing-identifier"
version = "0.2.2"
edition = "2021"
authors = ["Human Colossus"]
description = "WASM bindings to Self-Addressing identifier library"
documentation = "https://github.com/THCLab/cesrox-bindings/tree/main/said/wasm"
homepage = "https://github.com/THCLab/cesrox-bindings/tree/main/said/wasm"
repository = "https://github.com/THCLab/cesrox-bindings/tree/main/said/wasm"
license = "EUPL-1.2"
keywords = ["keri", "SAI", "SAID", "identifier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
said = { version = "0.3.0" }

[lib]
crate-type = ["cdylib"]
